k8s/marketing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketing
  namespace: mymarina-prod
spec:
  selector:
    app: marketing
  ports:
    - port: 80
      targetPort: 8080
