k8s/marketing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketing
  namespace: mymarina-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mymarina.org
        - www.mymarina.org
      secretName: mymarina-marketing-tls
  rules:
    - host: mymarina.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marketing
                port:
                  number: 80
    - host: www.mymarina.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marketing
                port:
                  number: 80
